<resources>
    <string name="app_name">calculator-klopoff</string>
    <string name="button_change_sign">+/-</string>
    <string name="button_percentage">%</string>
    <string name="button_divide">/</string>
    <string name="button_multiply">*</string>
    <string name="button_subtract">-</string>
    <string name="button_add">+</string>
    <string name="button_delimiter">,</string>
    <string name="button_result">=</string>
    <string name="button_clear">C</string>
    <string name="button_all_clear">AC</string>
    <string name="button_9">9</string>
    <string name="button_8">8</string>
    <string name="button_7">7</string>
    <string name="button_6">6</string>
    <string name="button_5">5</string>
    <string name="button_4">4</string>
    <string name="button_3">3</string>
    <string name="button_2">2</string>
    <string name="button_1">1</string>
    <string name="button_0">0</string>
</resources>