<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/column1Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.025" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/column1End"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2625" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/column2Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2625" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/column2End"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/column3Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/column3End"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7375" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/column4Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7375" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/column4End"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.975" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/row1Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.485" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/row1End"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.585" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/row2Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.585" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/row2End"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.685" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/row3Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.685" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/row3End"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.785" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/row4Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.785" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/row4End"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.885" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/row5Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.885" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/row5End"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/calculationResultText"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:autoSizeTextType="uniform"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toTopOf="@id/row1Start"
        app:layout_constraintEnd_toEndOf="@id/column4End"
        app:layout_constraintStart_toStartOf="@id/column1Start"
        tools:text="100" />

    <Button
        android:id="@+id/buttonClear"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/row1End"
        app:layout_constraintEnd_toStartOf="@id/column1End"
        app:layout_constraintStart_toEndOf="@id/column1Start"
        app:layout_constraintTop_toTopOf="@id/row1Start"
        tools:text="AC" />

    <Button
        android:id="@+id/buttonChangeSign"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:text="@string/button_change_sign"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/row1End"
        app:layout_constraintEnd_toStartOf="@id/column2End"
        app:layout_constraintStart_toEndOf="@id/column2Start"
        app:layout_constraintTop_toTopOf="@id/row1Start" />

    <Button
        android:id="@+id/buttonPercentage"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:text="@string/button_percentage"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/row1End"
        app:layout_constraintEnd_toStartOf="@id/column3End"
        app:layout_constraintStart_toEndOf="@id/column3Start"
        app:layout_constraintTop_toTopOf="@id/row1Start" />

    <Button
        android:id="@+id/buttonDivide"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:text="@string/button_divide"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/row1End"
        app:layout_constraintEnd_toStartOf="@id/column4End"
        app:layout_constraintStart_toEndOf="@id/column4Start"
        app:layout_constraintTop_toTopOf="@id/row1Start" />

    <Button
        android:id="@+id/button7"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:text="@string/button_7"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/row2End"
        app:layout_constraintEnd_toStartOf="@id/column1End"
        app:layout_constraintStart_toEndOf="@id/column1Start"
        app:layout_constraintTop_toTopOf="@id/row2Start" />

    <Button
        android:id="@+id/button8"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:text="@string/button_8"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/row2End"
        app:layout_constraintEnd_toStartOf="@id/column2End"
        app:layout_constraintStart_toEndOf="@id/column2Start"
        app:layout_constraintTop_toTopOf="@id/row2Start" />

    <Button
        android:id="@+id/button9"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:text="@string/button_9"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/row2End"
        app:layout_constraintEnd_toStartOf="@id/column3End"
        app:layout_constraintStart_toEndOf="@id/column3Start"
        app:layout_constraintTop_toTopOf="@id/row2Start" />

    <Button
        android:id="@+id/buttonMultiply"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:text="@string/button_multiply"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/row2End"
        app:layout_constraintEnd_toStartOf="@id/column4End"
        app:layout_constraintStart_toEndOf="@id/column4Start"
        app:layout_constraintTop_toTopOf="@id/row2Start" />

    <Button
        android:id="@+id/button4"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:text="@string/button_4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/row3End"
        app:layout_constraintEnd_toStartOf="@id/column1End"
        app:layout_constraintStart_toEndOf="@id/column1Start"
        app:layout_constraintTop_toTopOf="@id/row3Start" />

    <Button
        android:id="@+id/button5"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:text="@string/button_5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/row3End"
        app:layout_constraintEnd_toStartOf="@id/column2End"
        app:layout_constraintStart_toEndOf="@id/column2Start"
        app:layout_constraintTop_toTopOf="@id/row3Start" />

    <Button
        android:id="@+id/button6"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:text="@string/button_6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/row3End"
        app:layout_constraintEnd_toStartOf="@id/column3End"
        app:layout_constraintStart_toEndOf="@id/column3Start"
        app:layout_constraintTop_toTopOf="@id/row3Start" />

    <Button
        android:id="@+id/buttonSubtract"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:text="@string/button_subtract"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/row3End"
        app:layout_constraintEnd_toStartOf="@id/column4End"
        app:layout_constraintStart_toEndOf="@id/column4Start"
        app:layout_constraintTop_toTopOf="@id/row3Start" />

    <Button
        android:id="@+id/button1"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:text="@string/button_1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/row4End"
        app:layout_constraintEnd_toStartOf="@id/column1End"
        app:layout_constraintStart_toEndOf="@id/column1Start"
        app:layout_constraintTop_toTopOf="@id/row4Start" />

    <Button
        android:id="@+id/button2"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:text="@string/button_2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/row4End"
        app:layout_constraintEnd_toStartOf="@id/column2End"
        app:layout_constraintStart_toEndOf="@id/column2Start"
        app:layout_constraintTop_toTopOf="@id/row4Start" />

    <Button
        android:id="@+id/button3"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:text="@string/button_3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/row4End"
        app:layout_constraintEnd_toStartOf="@id/column3End"
        app:layout_constraintStart_toEndOf="@id/column3Start"
        app:layout_constraintTop_toTopOf="@id/row4Start" />

    <Button
        android:id="@+id/buttonAdd"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:text="@string/button_add"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/row4End"
        app:layout_constraintEnd_toStartOf="@id/column4End"
        app:layout_constraintStart_toEndOf="@id/column4Start"
        app:layout_constraintTop_toTopOf="@id/row4Start" />

    <Button
        android:id="@+id/button0"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:text="@string/button_0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/row5End"
        app:layout_constraintEnd_toStartOf="@id/column2End"
        app:layout_constraintStart_toEndOf="@id/column1Start"
        app:layout_constraintTop_toTopOf="@id/row5Start" />

    <Button
        android:id="@+id/buttonDelimiter"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:text="@string/button_delimiter"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/row5End"
        app:layout_constraintEnd_toStartOf="@id/column3End"
        app:layout_constraintStart_toEndOf="@id/column3Start"
        app:layout_constraintTop_toTopOf="@id/row5Start" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:text="@string/button_result"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/row5End"
        app:layout_constraintEnd_toStartOf="@id/column4End"
        app:layout_constraintStart_toEndOf="@id/column4Start"
        app:layout_constraintTop_toTopOf="@id/row5Start" />

</androidx.constraintlayout.widget.ConstraintLayout>